zellij-server/src/panes/unit/snapshots/zellij_server__panes__terminal_pane__grid_tests__overflowing_sixel_image_inside_terminal_pane.snap
---
source: zellij-server/src/panes/./unit/terminal_pane_tests.rs
assertion_line: 156
expression: "format!(\"{:?}\", terminal_pane.grid)"
---
00 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
01 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
02 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
03 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
04 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
05 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
06 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
07 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
08 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
09 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
10 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
11 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
12 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
13 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
14 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
15 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
16 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
17 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
18 (C): SixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSixelSix
19 (C): 

