zellij-server/src/panes/unit/snapshots/zellij_server__panes__terminal_pane__grid_tests__scrolling_inside_a_pane-2.snap
---
source: zellij-server/src/panes/./unit/terminal_pane_tests.rs
expression: "format!(\"{:?}\", terminal_pane . grid)"

---
00 (C): line 5
01 (C): line 6
02 (C): line 7
03 (C): line 8
04 (C): line 9
05 (C): line 10
06 (C): line 11
07 (C): line 12
08 (C): line 13
09 (C): line 14
10 (C): line 15
11 (C): line 16
12 (C): line 17
13 (C): line 18
14 (C): line 19
15 (C): line 20
16 (C): line 21
17 (C): line 22
18 (C): line 23
19 (C): line 24

