zellij-server/src/panes/unit/snapshots/zellij_server__panes__terminal_pane__grid_tests__scrolling_inside_a_pane-3.snap
---
source: zellij-server/src/panes/./unit/terminal_pane_tests.rs
expression: "format!(\"{:?}\", terminal_pane . grid)"

---
00 (C): line 12
01 (C): line 13
02 (C): line 14
03 (C): line 15
04 (C): line 16
05 (C): line 17
06 (C): line 18
07 (C): line 19
08 (C): line 20
09 (C): line 21
10 (C): line 22
11 (C): line 23
12 (C): line 24
13 (C): line 25
14 (C): line 26
15 (C): line 27
16 (C): line 28
17 (C): line 29
18 (C): line 30
19 (C): 

