zellij-server/src/panes/unit/snapshots/zellij_server__panes__terminal_pane__grid_tests__scrolling_inside_a_pane.snap
---
source: zellij-server/src/panes/./unit/terminal_pane_tests.rs
expression: "format!(\"{:?}\", terminal_pane . grid)"

---
00 (C): line 2
01 (C): line 3
02 (C): line 4
03 (C): line 5
04 (C): line 6
05 (C): line 7
06 (C): line 8
07 (C): line 9
08 (C): line 10
09 (C): line 11
10 (C): line 12
11 (C): line 13
12 (C): line 14
13 (C): line 15
14 (C): line 16
15 (C): line 17
16 (C): line 18
17 (C): line 19
18 (C): line 20
19 (C): line 21

